Fix Chef selector collapse that was broken due to use of routing

--- a/grubmenow-webapp/src/main/webapp/webassets/app.css
+++ b/grubmenow-webapp/src/main/webapp/webassets/app.css
@@ -118,8 +118,7 @@
 }
 
 .navLineBtn {
-     color: #0A549C;
-     font-weight: bold;
+     padding: 4px 0px;
 }
 
 .tableCtr {
